# rust-linux-syscall

./: Cargo.toml  LICENSE.txt  README.md  WORKSPACE  rustfmt.toml
linux-syscall/: BUILD  linux-syscall.rs
linux-syscall/arch/aarch64/: syscall_asm.rs  syscall_tbl.rs
linux-syscall/arch/arm/: syscall_asm.rs  syscall_tbl.rs
linux-syscall/arch/riscv64/: syscall_asm.rs  syscall_tbl.rs
linux-syscall/arch/x86/: syscall_asm.rs  syscall_tbl.rs
linux-syscall/arch/x86_64/: syscall_asm.rs  syscall_tbl.rs
